# pico_template

./: CMakeLists.txt  Makefile  README.md
.github/workflows/: template_cleanup.yml
src/: main.c
